tests/bad/frontend/multipleMethodDeclaration.latte
int main() {return 0;}

class C {
    void f(){}
    void f(){}
}